[package]
name = "hoisin-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["color", "derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
