[package]
name = "hoisin-ddns"
version = "0.1.0"
edition = "2024"

[package.metadata.deb]
maintainer = "RyanScott96"
copyright = "2025, RyanScot96, All Rights Reserved"
license-file = ["LICENSE"]
assets = [["target/release/hoisin-ddns", "/usr/bin/", "755"]]

[dependencies]
clap = { version = "4.5.49", features = ["color", "derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
